# psephos

./: .gitignore  ARCHITECTURE.md  DEMO.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS.md  HACKATHON_STATUS.md  LICENSE  README.md  READY_FOR_SUBMISSION.md  TEST_BROWSER_PROVING.md  TEST_REPORT.md  TODO.md  codama.json  index.html  package-lock.json  package.json  test-browser-proving.html  test-browser-proving.js  tsconfig.tsbuildinfo  vite.config.ts
anchor/: Anchor.toml  package-lock.json  package.json
anchor/keys/: psephos_verifier-keypair.json
anchor/programs/psephos/: Cargo.toml
anchor/programs/psephos/src/: lib.rs
anchor/tests/: psephos.ts
circuits/: 2026-01-25-this-session-is-being-continued-from-a-previous-co.txt  Nargo.toml  Prover.toml
circuits/hash_helper/: Nargo.toml
circuits/hash_helper/src/: main.nr
circuits/recursive_verifier/: Nargo.toml
circuits/recursive_verifier/src/: main.nr
circuits/src/: main.nr
proof-server/: index.js  package-lock.json  package.json  server.js
public/circuits/: psephos_circuits.json
scripts/: deploy-all.sh
src/: App.tsx
src/components/: CreateProposal.tsx  ProposalList.tsx  ResultsView.tsx  RevealVote.tsx  VoteForm.tsx  index.ts
src/lib/: browser-proving.ts  gnark.ts  noir-api.ts  psephos.ts  recursive-verifier.ts
