[package]
name = "psephos"
version = "0.1.0"
description = "Private voting system using ZK proofs on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psephos"

[features]
# NOTE: skip-zk-verify is enabled by default for testing/demo
# For production with real Sunspot verifier, change to: default = []
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Enable this feature to skip ZK proof CPI verification (for testing with mock proofs)
skip-zk-verify = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# [dev-dependencies]
# litesvm = "=0.7.1"
# solana-sdk = "2.3"
